import groovy.xml.XmlParser
import org.gradle.api.tasks.testing.logging.TestLogEvent
import org.gradle.api.tasks.testing.logging.TestExceptionFormat

def EXAMPLE_XML_DIR = "../docs/content/en/docs/complete-examples"
def MASTER_SCHEMA_FILE_PATH = "../event-logging.xsd"
def jarName = "event-logging-transformer-${versions.eventLogging}.jar"
def fatJarName = "event-logging-transformer-${versions.eventLogging}-all.jar"

// Extract the major version number from the master schema file
def masterSchemaFile = project.file(MASTER_SCHEMA_FILE_PATH)
def masterSchemaText = masterSchemaFile.text
def eventLoggingMajorVer = (masterSchemaText =~ /xmlns:evt="event-logging:([0-9]+)"/)[0][1]
def generatedDir = "pipelines/generated"

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'ca.cutterslade.analyze'
apply plugin: 'idea'
apply plugin: 'com.gradleup.shadow'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
        vendor = JvmVendorSpec.ADOPTIUM
    }
}

// required for application plugin
application {
    mainClass = "event.logging.transformer.SchemaGenerator"
}

jar {
    manifest {
        attributes(
                "Implementation-Title": "event-Logging-transformer",
                "Implementation-Version": versions.eventLogging,
                "Main-Class": application.mainClass.get()
        )
    }
    archiveFileName = jarName
}

shadowJar {
    // Allows us to build fat jars with lots of files
    zip64 true

    archiveFileName = fatJarName
}

// In this section you declare the dependencies for your production and test code
dependencies {

    implementation libs.bundles.jackson
    // The production code uses the SLF4J logging API at compile time
    implementation libs.slf4j.api

    runtimeOnly libs.logback.classic
    runtimeOnly libs.saxon

    testImplementation libs.javaDiffUtils
    testImplementation libs.bundles.basicTest.impl

    testRuntimeOnly libs.bundles.basicTest.runtime
}

run {
    args = ['pipelines', '../event-logging.xsd']
}

runShadow {
    args = ['pipelines', '../event-logging.xsd']
}

tasks.register('transformersDist', Zip) {
    archiveFileName = "transformations-${versions.eventLogging}.zip"
    from 'pipelines/transformations'
}

// Run the python script to validate all the version numbers in the schema file
tasks.register('validateSchemaVersions', Exec) {
    workingDir '../'
    commandLine "python3", "validateSchemaVersions.py", versions.eventLogging
}

// Run a bash script to compare the currennt jaxb source with the latest released version so
// we can see what impact schema changes have had on the library
tasks.register('diffAgainstLatest', Exec) {
    dependsOn runShadow
    executable "../diffAgainstLatestReleases.sh"
    args "./pipelines"
}

// Find the non-client generated schema file for use in xml validation
def getSchemaFileForValidation = {
    def pattern = ~/.*event-logging-v999-documentation\.xsd/
    def schemas = []
    def dir = project.file(generatedDir)
    dir.eachFileMatch(pattern) { file ->
        schemas.add(file)
    }
    if (schemas.size == 0) {
        throw new GradleException("Found no files matching pattern [${pattern}] in dir [${dir}]")
    } else if (schemas.size > 1) {
        throw new GradleException("Found multiple files [${schemas}] matching pattern [${pattern}] in dir [${dir}]")
    }
    return schemas[0]
}

// Validate any XML files found in EXAMPLE_XML_DIR (or sub directories of it) against the
// non-client generated schema. This is to ensure that the examples are kept up to date
// and to highlight breaking changes
tasks.register('validateExampleXmlAgainstSchema', Exec) {
    dependsOn 'runShadow'

    // Define files lazily to avoid configuration issues
    def schemaFile = getSchemaFileForValidation()
    def absExamplesDir = project.file(EXAMPLE_XML_DIR).absolutePath
    def scriptFile = project.file('../validateExampleXml.sh')

    // Declare inputs/outputs for Gradle up-to-date checks
    inputs.file(schemaFile)
    inputs.dir(project.file(EXAMPLE_XML_DIR))
    inputs.file(scriptFile)

    executable scriptFile.absolutePath
    args schemaFile.absolutePath, absExamplesDir

    ignoreExitValue = true

    doLast {
        if (executionResult.get().exitValue != 0) {
            throw new GradleException(
                    "XML files in ${absExamplesDir} failed validation, or 'xmllint' (in 'libxml2-utils' pkg) is not installed")
        }
    }
}

// run the transformer code to build the schemas from the configured pipelines
tasks.build.dependsOn runShadow
tasks.build.dependsOn transformersDist
tasks.build.dependsOn diffAgainstLatest
tasks.build.dependsOn validateExampleXmlAgainstSchema

tasks.compileJava.dependsOn validateSchemaVersions

// 1. Create a lazy FileCollection to collect XML output directories
def testXmlOutputs = objects.fileCollection()

tasks.withType(Test).configureEach { testTask ->
    useJUnitPlatform()

    // Use full logging for test exceptions so we can see where the failure occurred
    testLogging {
        events TestLogEvent.FAILED
        exceptionFormat TestExceptionFormat.FULL
        showExceptions true
        showCauses true
        showStackTraces true
    }

    // Lazily attach this task's report output directory property
    testXmlOutputs.from({ testTask.reports.junitXml.outputLocation.orNull?.asFile })
    testXmlOutputs.builtBy(testTask)

    // Automatically run the aggregator after tests execute
    finalizedBy('processFailedTestReports')
}


// 3. Register the aggregator task
tasks.register('processFailedTestReports') {
    // Declare inputs for Gradle caching and dependency tracking
    inputs.files(testXmlOutputs)

    doLast {
        // Safe to iterate: 'testXmlOutputs.files' resolves to java.io.File objects
        // without touching the TaskCollection during execution phase
        testXmlOutputs.files.each { xmlDir ->
            if (!xmlDir.exists()) return

            xmlDir.eachFileMatch(~$/TEST-.*\.xml/$) { xmlFile ->
//                println "xml file: ${xmlFile.absolutePath}"

                def xml = new XmlParser().parse(xmlFile)
                int failures = (xml.@failures ?: '0').toInteger()
                int errors = (xml.@errors ?: '0').toInteger()

                if (failures > 0 || errors > 0) {
                    def className = xml.@name
                    def count = failures + errors
                    println "--------------------------------------------------------------------------------"
                    println "${count} failure(s) in test class ${className}:"
                    println "  Report file:     ${xmlFile.absolutePath}"

                    // Find and process each testcase that contains a failure
                    xml.testcase.findAll { it.failure.size() > 0 }.each { testCaseElm ->
                        def testCaseName = testCaseElm.@name

                        testCaseElm.failure.each { failureElm ->
//                            def message = failureElm.@message
                            def failureText = failureElm.text().trim()

                            println "  Test Case:       ${testCaseName}"
//                            println "  Failure Message: ${message}"
                            println "  Details:         ${failureText}"
                        }
                    }

                    // Extract CDATA / text content from <system-out>
                    def sysOut = xml.'system-out'?.text()?.trim()
                    if (sysOut) {
                        println "  System Out (${className}):\n${sysOut}"
                    }
                    println "--------------------------------------------------------------------------------"
                }
            }
        }
    }
}

clean {
    delete 'pipelines/generated'
    delete 'pipelines/downloaded'
}
